--- a/client/src/styles/UserOps.css
+++ b/client/src/styles/UserOps.css
@@ -2,16 +2,19 @@
   background-color: rgba(255, 255, 255, 0.7);
   border-radius: 0.5rem;
   padding: 0.5rem;
+  text-align: left;
 }
 
 .user-op {
-  margin-top: 1rem;
+  margin-top: 2rem !important;
 }
 
 .user-oplink {
   font-weight: 600;
   cursor: pointer;
   transition: all 0.4s;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 0.5rem;
   padding: 0.2rem;
 }
 .user-oplink:hover {
