--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Anton&family=Open+Sans:ital,wght@0,400;1,300;1,400;1,600&family=Shippori+Mincho:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=RocknRoll+One&display=swap");
+
 .App {
   text-align: center;
   font-family: "Akaya Telivigala", cursive;
