--- a/client/src/styles/ProjectColumn.css
+++ b/client/src/styles/ProjectColumn.css
@@ -2,16 +2,21 @@
   text-align: left;
   overflow-y: scroll;
   height: 80%;
-  border: black 0.1rem solid;
-  border-radius: 0.5rem;
   margin-bottom: 1rem;
+  font-size: large;
+  font-weight: 600;
 }
 .project-list .list-item {
-  font-size: large;
+  background-color: white;
   cursor: pointer;
-  padding: 0.1rem;
-  border-radius: 0.5rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
   transition: all 0.2s;
+  margin-top: 0.75rem;
+}
+.project-list .list-item .item-footer {
+  font-weight: 400;
+  font-size: medium;
 }
 .project-list .list-item:hover {
   background-color: black;
