--- a/client/src/styles/ListColumn.css
+++ b/client/src/styles/ListColumn.css
@@ -11,14 +11,14 @@
   padding: 0.25rem;
   border-radius: 0.25rem;
   background-color: white;
-  margin-top: 0.6rem;
+  margin: 0.6rem;
   transition: all 0.2s;
+  border: 0.1rem rgb(230, 229, 229) solid;
 }
 .todo-box {
   font-size: large;
 }
 
 .todo-list .list-item:hover {
-  background-color: black;
-  color: white;
+  background-color: rgba(255, 255, 255, 0.5);;
 }
