--- a/client/src/styles/ProjectColumn.css
+++ b/client/src/styles/ProjectColumn.css
@@ -19,8 +19,7 @@
   font-size: medium;
 }
 .project-list .list-item:hover {
-  background-color: black;
-  color: white;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .project-footer {
