--- a/client/src/styles/Main.css
+++ b/client/src/styles/Main.css
@@ -3,14 +3,18 @@
   background-color: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(10px);
   border-radius: 0.5rem;
-  height: 80vh;
-  margin: 1rem;
+  height: 90vh;
+  margin: 0.45rem;
   text-align: left;
   font-family: "Open Sans", sans-serif;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border: 0.1rem rgb(224, 224, 224) solid;
+}
+.main-cont{
+
 }
 .section-title {
   font-weight: 700;
+  font-size: 1.25rem !important;
 }
 .no-padding {
   padding: 0 !important;
