--- a/client/src/styles/ProjectColumn.css
+++ b/client/src/styles/ProjectColumn.css
@@ -23,5 +23,81 @@
 }
 
 .project-footer {
+  padding-top: 1rem;
+  margin-top: 0.5rem;
+}
+.project-footer .btn {
   text-align: left;
+  font-size: 1.4rem;
+  font-weight: 400 !important;
+  color: rgb(119, 119, 119) !important;
+}
+.project-name {
+  font-weight: 600;
+  padding-bottom: 0.5rem;
+  border-bottom: solid rgb(223, 223, 223) 0.1rem;
+}
+
+.project-description {
+  font-size: 1rem;
+  font-weight: 400;
+  color: rgb(75, 75, 75);
+  text-align: left;
+  margin-bottom: 0.5rem;
+  border-bottom: solid rgb(223, 223, 223) 0.1rem;
+}
+
+.project-stats {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: 0.5rem;
+  text-align: center;
+}
+
+.project-date {
+  font-weight: 500;
+  text-align: left;
+  margin: 0.2rem;
+  color: rgb(77, 76, 76);
+}
+.project-stat {
+  padding: 0.25rem;
+}
+.project-main {
+  background-color: white;
+  border: rgb(223, 223, 223) solid 0.1rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  height: 95%;
+}
+
+.project-portrait {
+  font-size: 8rem;
+  text-align: center;
+  color: rgb(88, 88, 88);
+}
+
+.project-portrait i {
+  padding: 1rem;
+}
+.project-todos {
+  margin-top: 1rem;
+}
+#delete-btn {
+  color: red !important;
+}
+
+#completed {
+  color: rgb(148, 148, 148);
+  border-top: rgb(223, 223, 223) solid 0.1rem;
+}
+
+#remaining {
+  color: rgb(107, 107, 107);
+  border-top: rgb(223, 223, 223) solid 0.1rem;
+}
+
+#total-count {
+  border-top: solid rgb(223, 223, 223) 0.1rem;
+  margin-top: 0.5rem;
 }
