--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -10,7 +10,7 @@
 }
 
 .jumbotron {
-  background-color: rgba(255, 255, 255, 0.6) !important;
+  background-color: #f8bc72 !important;
   backdrop-filter: blur(10px);
   font-size: x-large;
 }
