--- a/client/src/styles/ListColumn.css
+++ b/client/src/styles/ListColumn.css
@@ -11,7 +11,6 @@
   text-align: left;
   font-size: medium;
   font-weight: 600;
-  background-color: #e8ae68;
 }
 .todo-list::-webkit-scrollbar {
   display: none;
@@ -33,6 +32,10 @@
   border-bottom: 0.1rem#c79c78 solid;
 }
 
+.completed {
+  color: rgb(90, 89, 89) !important;
+  background-color: transparent !important;
+}
 .todo-box {
   font-size: large;
 }
