--- a/client/src/styles/ListColumn.css
+++ b/client/src/styles/ListColumn.css
@@ -33,15 +33,19 @@
 }
 
 .completed {
-  color: rgb(90, 89, 89) !important;
+  color: rgb(49, 49, 49) !important;
   background-color: transparent !important;
+  border: 0 !important;
+}
+.completed:hover {
+  border: 0;
 }
 .todo-box {
   font-size: large;
 }
 
 .todo-list .list-item:hover {
-  border-color: black;
+  background-color: #fdda94;
 }
 
 .todo-input {
