project cont style

--- a/client/src/styles/ProjectColumn.css
+++ b/client/src/styles/ProjectColumn.css
@@ -68,6 +68,7 @@
   background-color: #ffd480;
   border-bottom: 0.1rem#c79c78 solid;
   border-radius: 0.5rem;
+  margin-top: 2rem;
 }
 .project-portrait {
   font-size: 8rem;
