--- a/client/src/styles/ProjectColumn.css
+++ b/client/src/styles/ProjectColumn.css
@@ -10,7 +10,7 @@
   font-weight: 400 !important;
 
   background-color: transparent !important;
-  color: black !important;
+  color: white !important;
   border-bottom: solid #c79c78 0.1rem !important;
 }
 .project-footer .btn:hover {
@@ -19,56 +19,91 @@
 .project-footer .btn-group-vertical {
   width: 100% !important;
 }
-.project-name {
-  font-weight: 600;
-  padding: 0.5rem;
-  border-bottom: solid #c79c78 0.1rem;
-  color: black;
-}
-
-.project-description {
-  font-size: 1rem;
-  font-weight: 400;
-  color: rgb(75, 75, 75);
-  text-align: left;
-  margin-bottom: 0.5rem;
-  border-bottom: solid #c79c78 0.1rem;
-}
 
 .project-stats {
   font-size: 1.25rem;
-  font-weight: 600;
-  margin-top: 0.5rem;
-  text-align: center;
-
-  padding: 0.25rem;
+  color: white;
+}
+.project-info {
+  border-top: solid #4ac0e0 0.2rem;
+  font-size: 1rem;
+  color: white;
+}
+.project-info .title {
+  margin-left: 1rem;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
+.project-info .pnav-item:hover {
+  background-color: transparent;
+  cursor: text;
+}
 .project-date {
   font-weight: 500;
   text-align: left;
   margin: 0.2rem;
-  color: black !important;
 }
-.project-stat {
+
+.pnav-item {
   padding: 0.25rem;
+  text-align: left;
+  border-radius: 0.5rem;
+  padding-left: 0.5rem;
+  cursor: pointer;
+
+  font-weight: 500;
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+}
+.pnav-i {
+  width: 1.75rem !important;
+  display: inline-block;
+  overflow: hidden;
+  text-align: center !important;
+}
+.pnav-item i {
+}
+
+.pnav-item:hover {
+  color: white;
+  background-color: rgba(255, 255, 255, 0.336);
 }
 .project-main {
-  background-color: #e8ae68;
-  padding: 0.75rem;
+  background-color: #4dc8e9;
   padding-top: 0rem;
   padding-bottom: 0;
-  border-right: solid #d49f5e 0.1rem !important;
+  border-right: solid #4ac0e0 0.2rem !important;
+  color: rgb(232, 232, 233) !important;
+  width: 16rem;
 }
 
-.project-base {
+.user-port {
+  font-size: 1.25rem;
+  padding: 0.75rem;
+  color: white;
+  margin-left: 0.25rem !important;
+  margin-top: 0.25rem;
+  border-bottom: solid #4ac0e0 0.2rem;
 }
 
-.project-cont {
-  background-color: #ffd480;
+.user-menu {
+  float: right;
+  cursor: pointer;
+  color: rgb(232, 232, 233);
+}
+.user-portrait {
+}
+.user-menu i {
+  margin-left: 0.5rem;
+}
+.user-menu i:hover {
+  color: white;
+}
+
+.hover .project-cont {
   border-bottom: 0.1rem#c79c78 solid;
   border-radius: 0.5rem;
-  margin-top: 2rem;
 }
 .project-portrait {
   font-size: 8rem;
@@ -87,8 +122,6 @@
 }
 
 #completed {
-  color: #000000;
-  border-top: #c79c78 solid 0.1rem;
 }
 
 #remaining {
