--- a/client/src/styles/ProjectColumn.css
+++ b/client/src/styles/ProjectColumn.css
@@ -25,7 +25,7 @@
   color: white;
 }
 .project-info {
-  border-top: solid #4ac0e0 0.2rem;
+  border-top: solid #384857 0.2rem;
   font-size: 1rem;
   color: white;
 }
@@ -70,10 +70,10 @@
   background-color: rgba(255, 255, 255, 0.336);
 }
 .project-main {
-  background-color: #4dc8e9;
+  background-color: #405364;
   padding-top: 0rem;
   padding-bottom: 0;
-  border-right: solid #4ac0e0 0.2rem !important;
+  border-right: solid #384857 0.2rem !important;
   color: rgb(232, 232, 233) !important;
   width: 16rem;
 }
@@ -82,9 +82,7 @@
   font-size: 1.25rem;
   padding: 0.75rem;
   color: white;
-  margin-left: 0.25rem !important;
-  margin-top: 0.25rem;
-  border-bottom: solid #4ac0e0 0.2rem;
+  border-bottom: solid #384857 0.2rem;
 }
 
 .user-menu {
