--- a/client/src/styles/ListColumn.css
+++ b/client/src/styles/ListColumn.css
@@ -38,6 +38,7 @@
   margin-bottom: 0.3rem;
   transition: all 0.2s;
   border-bottom: 0.1rem #e0e0e0 solid;
+  white-space: nowrap;
 }
 .todo-list .list-item .main {
   width: 24rem;
@@ -160,6 +161,7 @@
 
 .todo-append {
   float: right;
+  white-space: nowrap;
 }
 .stat {
   width: 4rem;
@@ -167,10 +169,13 @@
   border-right: 0.1rem #e0e0e0 solid !important;
   display: inline-block;
   text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 1rem !important;
 }
 
 .stat.cont {
-  width: 8rem;
+  width: 6rem;
 }
 .todo-append .stat i {
   overflow: hidden;
@@ -204,4 +209,26 @@
 }
 
 #first {
+}
+
+@media screen and (max-width: 1400px) {
+  .stat {
+    width: 2.6rem;
+    font-size: 0.75rem !important;
+  }
+  .todo-list .list-item .main {
+    font-size: 0.75rem !important;
+    width: 15rem;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .stat {
+    width: 1.25rem;
+    font-size: 0.5rem !important;
+  }
+  .todo-list .list-item .main {
+    font-size: 0.75rem !important;
+    width: 15rem;
+  }
 }
