--- a/client/src/styles/ProjectColumn.css
+++ b/client/src/styles/ProjectColumn.css
@@ -1,8 +1,35 @@
 .project-footer {
-  padding-top: 1rem;
   margin-top: 2rem;
-  height: 25vh;
-  border: 0.5rem;
+  border-top: solid #384857 0.2rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.inav {
+  padding: 0.5rem;
+  width: 33.3%;
+  text-align: center;
+  float: left;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.inav:hover {
+  color: white;
+  background-color: rgba(161, 166, 172, 0.336);
+  border-radius: 0.5rem;
+}
+
+#github:hover {
+  color: #a96ae4;
+}
+
+#twitter:hover {
+  color: rgb(110, 185, 207);
+}
+#stack:hover {
+  color: rgb(233, 173, 62);
 }
 .project-footer .btn {
   text-align: left;
@@ -69,6 +96,23 @@
 .pnav-item:hover {
   color: white;
   background-color: rgba(161, 166, 172, 0.336);
+}
+
+.pnav-drop {
+  padding: 0.5rem;
+  padding-top: 0;
+  margin-left: 2rem;
+  border-left: 0.1rem rgba(161, 166, 172, 0.336) solid;
+  font-size: 1rem;
+}
+.pnav-drop-item {
+  padding: 0.25rem;
+  padding-left: 0.5rem;
+}
+
+#drop-header {
+  font-size: 1.25rem;
+  padding-left: 0;
 }
 .project-main {
   background-color: #405364;
