--- a/client/src/styles/Main.css
+++ b/client/src/styles/Main.css
@@ -24,7 +24,7 @@
 }
 
 .btn-nice:hover {
-  background-color: #ecb674 !important;
+  background-color: white !important;
 }
 .project-name {
   margin-top: 0.75rem;
