--- a/client/src/styles/ListColumn.css
+++ b/client/src/styles/ListColumn.css
@@ -69,7 +69,7 @@
 
 .todo-list .list-item:hover {
   border-radius: 0.5rem;
-  background-color: rgba(102, 102, 102, 0.1);
+  background-color: #e6edf3;
 }
 
 .todo-input {
@@ -122,6 +122,7 @@
   font-weight: inherit !important;
   padding: 0 !important;
   color: inherit !important;
+  box-shadow: none !important;
 }
 
 .stat-drop {
