--- a/client/src/styles/ListColumn.css
+++ b/client/src/styles/ListColumn.css
@@ -25,6 +25,7 @@
   font-size: 1.25rem !important;
   padding: 0.75rem;
   font-weight: 600;
+  color: black;
 }
 .todo-top-menu .dropdown-menu {
   font-size: 1.25rem !important;
@@ -221,4 +222,25 @@
     font-size: 0.75rem !important;
     width: 25vw;
   }
+}
+
+.syncing {
+  color: rgb(105, 105, 105);
+  font-size: 0.75rem !important;
+  padding: 0.5rem;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.syncing i {
+  animation-name: spin;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
