--- a/client/src/styles/UserOps.css
+++ b/client/src/styles/UserOps.css
@@ -1,10 +1,9 @@
 .user-opform {
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: white;
   border-radius: 0.5rem;
   padding: 1rem;
   text-align: left;
 }
-
 .user-op {
   margin-top: 2rem !important;
 }
