--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,3 +66,22 @@
 .about p {
   margin: 0;
 }
+
+.returner {
+  display: none;
+  padding: 0.5rem;
+  color: rgb(63, 63, 63);
+  cursor: pointer;
+}
+
+.returner:hover {
+  color: black;
+  background-color: #e6edf3;
+  border-radius: 0.5rem;
+}
+
+@media screen and (max-width: 573px) {
+  .returner {
+    display: inline;
+  }
+}
