--- a/client/src/styles/ProjectColumn.css
+++ b/client/src/styles/ProjectColumn.css
@@ -176,8 +176,29 @@
   margin-top: 0.5rem;
 }
 
+.mini-navbar {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #405364;
+  height: 5rem;
+  color: rgb(185, 185, 185);
+}
+.mini-navbar .col {
+  text-align: center !important;
+}
+.mini-navbar .pnav-item {
+  height: 5rem;
+  font-size: 2.5rem;
+  text-align: center;
+}
 @media screen and (max-width: 1200px) {
   .project-main {
     display: none;
+  }
+  .mini-navbar {
+    display: inline;
   }
 }
