--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,6 +72,8 @@
   padding: 0.5rem;
   color: rgb(63, 63, 63);
   cursor: pointer;
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
 
 .returner:hover {
