--- a/client/src/styles/Settings.css
+++ b/client/src/styles/Settings.css
@@ -1,18 +1,19 @@
 .settings-cont {
   font-family: "Open Sans", sans-serif;
-  padding-top: 1rem;
 }
 
 .settings-header {
   font-size: 1.75rem;
   text-align: left;
   font-weight: 600;
+  height: 10vh;
+  padding-top: 1rem;
 }
 
 .settings-navbar {
   border-right: 0.1rem #e0e0e0 solid;
-  height: 70vh;
-  padding: 1rem;
+  height: 90vh;
+  padding-right: 1rem;
 }
 
 .settings-nav {
@@ -21,11 +22,40 @@
   padding: 0.5rem;
   font-weight: 500;
   text-align: left;
-  color: rgb(94, 94, 94);
+  color: rgb(121, 121, 121);
   cursor: pointer;
 }
 
 .settings-nav:hover {
   color: black;
   background-color: rgba(99, 99, 99, 0.1);
+}
+
+.settings-inspect {
+  height: 80vh;
+}
+
+.us-cont {
+}
+
+.us-portrait {
+  font-size: 6rem;
+}
+.us-name {
+  font-size: 2rem;
+}
+.us-email {
+  font-size: 1.25rem;
+  color: rgb(85, 85, 85);
+}
+.us-options {
+  padding: 0.5rem;
+}
+
+.us-stats {
+  font-size: 1rem;
+  color: rgb(107, 107, 107);
+}
+.us-stat {
+  padding: 0.5rem;
 }
