--- a/client/src/styles/TodoColumn.css
+++ b/client/src/styles/TodoColumn.css
@@ -53,7 +53,7 @@
   border: 0 !important;
   outline: 0 !important;
   width: 100%;
-  height: 60vh;
+  height: 20vh;
   resize: none;
 }
 
@@ -91,12 +91,83 @@
   padding: 0.25rem;
 }
 
+.side-cont {
+  padding: 0.5rem;
+  padding-right: 0;
+  padding-left: 0;
+  border-bottom: 0.1rem #e0e0e0 solid;
+}
+.side-head {
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.side-head .append {
+  cursor: pointer;
+}
+.side-head .append i {
+  width: 2rem;
+  text-align: center;
+}
+
+.side-head .append:hover {
+  background-color: #e6edf3;
+  border-radius: 0.5rem;
+}
+
+.side-body {
+  height: 20vh;
+  overflow-y: scroll;
+}
+
+.side-body::-webkit-scrollbar {
+  display: none;
+}
+
+.side-item {
+  padding: 0.25rem;
+  border-bottom: 0.1rem #e0e0e0 solid;
+  margin-bottom: 0.1rem;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.side-item .append {
+  border-left: 0.1rem #e0e0e0 solid;
+}
+.side-item-main {
+  width: 70%;
+}
+
+.side-item i {
+  width: 2rem;
+  padding: 0.5rem;
+}
+.side-item i:hover {
+  background-color: #eef0f1;
+  border-radius: 0.5rem;
+}
+.side-item:hover {
+  background-color: #e6edf3;
+  border-radius: 0.5rem;
+}
+
+.cleaner-input {
+  background-color: transparent;
+  border: none;
+}
+
+.cleaner-input:focus {
+  outline: none;
+}
+
 @media screen and (max-width: 1200px) {
   .inspect-footer {
     position: relative;
     border-bottom: 0.1rem #e0e0e0 solid;
+    padding: 0;
   }
   .inspect-area {
-    height: 30vh;
+    height: 20vh;
   }
 }
